--- a/css/sitg.css
+++ b/css/sitg.css
@@ -1,8 +1,9 @@
-#cluster {
+#wordcloud {
     border:2px solid;
     border-radius:10px;
-    margin-top: 5px;
-    margin-left: 5px;
-    margin-right: 5px;
     border-color: rgba(0,0,0,0.3);
+}
+
+#wordcloud_content {
+    margin: 10px;
 }
